--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.zeylin</groupId>
 	<artifactId>event-sourcing-with-cqrs</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<name>event-sourcing-with-cqrs</name>
 	<description>Event Sourcing with CQRS application</description>
@@ -39,6 +39,11 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-52</artifactId>
+			<version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
